# MachineVisionGui

./: CMakeLists.txt  EmergencyStop.cpp  EmergencyStop.h  EmergencyStop.ui  eindwerk.pro  images.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  qtimages.qrc  timeOut.cpp  timeOut.h  timeOut.ui  untitled2.pro
I2C_controller/: arduinocom.cpp  arduinocom.h
camera_controller/: RaspiCamCV.c  cameramain.cpp  cameramain.h
languages/: Translation_en.ts  Translation_fi.ts  Translation_fr.ts  Translation_nl.ts
motor_controller/: MotorControllerSec.cpp  MotorControllerSec.h  SerialPort.cpp  SerialPort.h  motorcontrollerstartdialog.cpp  motorcontrollerstartdialog.h  motorcontrollerstartdialog.ui
